# cpp_docs

./: IncompleteTypes.md  README.md  casting.md  static.md
intcpp/lect1/: answer.txt  beer.txt  debug  debug.c  double.py  fib.c  hello.c  hello2.c  joke.txt  notes.md
intcpp/lect2/: notes.md
intcpp/lect3/: hello  mem  mem.cpp  notes.md
intcpp/lect4/: notes.md
intcpp/lect5/: notes.md
moderncpp/lect1/: CMakeLists.txt  ex1.cpp  main.cpp  notes.md  tools.cpp
moderncpp/lect2/: notes.md
moderncpp/lect3/: notes.md
moderncpp/lect4/: notes.md
moderncpp/lect5/: notes.md
moderncpp/lect6/: main.cpp  notes.md
